# wp-update

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
_gal/: adm.gxl  work.gxl
crates/wp-installer/: Cargo.toml  README.md
crates/wp-installer/src/: app.rs  cli.rs  error.rs  main.rs  report.rs  source.rs
crates/wp-installer/src/skills/: mod.rs  source.rs  target.rs
crates/wp-self-update/: Cargo.toml  README.md
crates/wp-self-update/src/: error.rs  fetch.rs  install.rs  lib.rs  lock.rs  manifest.rs  platform.rs  types.rs  versioning.rs
crates/wp-update-core/: Cargo.toml
crates/wp-update-core/src/: lib.rs  platform.rs  types.rs
docs/: orion-accessor-evaluation.md  wp-inst-usage.md  wp-inst-usage.zh-CN.md  wp-self-update-integration.md  wp-self-update-integration.zh-CN.md
