[package]
name = "wp-inst"
version = "0.1.7" # @gxl:set(version)
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Bootstrap installer for wp-labs binary releases"
repository = "https://github.com/wp-labs/wp-update"
readme = "README.md"
keywords = ["installer", "bootstrap", "update", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
wp-self-update = { version = "0.1.0", path = "../wp-self-update" }
