[package]
name = "wp-self-update"
version = "0.3.0" # @gxl:set(version)
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Self-update execution library for wp-labs binaries"
repository = "https://github.com/wp-labs/wp-update"
readme = "README.md"
keywords = ["self-update", "release", "installer", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
derive_more = { version = "2.1", features = ["from"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
flate2 = "1.1"
hex = "0.4"
indicatif = "0.18"
libc = "0.2"
orion-error = "0.8"
reqwest = "0.13.2"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.19", features = ["v4"] }
walkdir = "2.5"

[dev-dependencies]
flate2 = "1.1"
httpmock = "0.8"
tempfile = "3.23"
tar = "0.4"
